idelephant/namespace-idelephant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idelephant
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/deploy-id: 58867d802da3e7f4
