idelephant/deployment-id-noa-re.yaml
# Source: id.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-noa-re
  labels:
    app: id-noa-re
  namespace: idelephant
  annotations:
    noa.re/deploy-id: 58867d802da3e7f4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: id-noa-re
  template:
    metadata:
      labels:
        app: id-noa-re
      annotations:
        checksum/config: b9fe14bd70ced5037feb30fa7a97115301e8c93000b0e6704f22dc0f5ecdd85e
    spec:
      containers:
      - name: id-noa-re
        image: repo.noa.re/idelephant:0.2.3-cbd6c900
        args:
        - -c
        - /config/idelephant.toml
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: id-noa-re-config
          mountPath: /config
        - name: email-password
          mountPath: /email-password
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: id-noa-re-config
        configMap:
          name: id-noa-re-config
      - name: email-password
        secret:
          secretName: email-password
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: idmouse
              expirationSeconds: 3600
              audience: idmouse
