idelephant/service-id-noa-re.yaml
# Source: id.noa.re
apiVersion: v1
kind: Service
metadata:
  name: id-noa-re
  namespace: idelephant
spec:
  selector:
    app: id-noa-re
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
