idelephant/httproute-id-noa-re.yaml
# Source: id.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: id-noa-re
  namespace: idelephant
spec:
  parentRefs:
  - name: id-noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - id.noa.re
  rules:
  - backendRefs:
    - name: id-noa-re
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
